--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
-.DS_Store
 *.gem
+.DS_Store
+Gemfile.lock
+.bundle/
+log/*.log
+pkg/
+test/dummy/db/*.sqlite3
+test/dummy/log/*.log
+test/dummy/tmp/
+test/dummy/.sass-cache
+coverage/
+.rbx/
